Changes from 1.1 to 1.2
=======================

Until beta2:
------------

- bug fixes
- perfomance enhancements
- added show/hide grid on printout option
- paper layout now a property of sheet (not the whole workbook)
- header/footer now a property of sheet (not the whole workbook)
- Sort enhanced for
    - sorting by up to three rows or columns
    - possibility of putting the result of sorting some place else
    - you can use a custom lists (like days of week) as a primary key
    - option if you want to copy the layout or not
    - you can define a row header which gets copied but not sorted
- auto continuation support for every direction and all types supported in
  KSpread and for more complex series like 1,3,4,6,...
- just one "copy" instead of "copy" and "copy as text"
- insertion of series supports now doubles and decreasing series
- support for inserting data from SQL databases
- implemented "Goal Seek"
- implemented new shortcuts for cell formating 
- implemented "Insert from text file" and "Insert formated clipboard data"
- Added "Text to Column"
- improved Data Consolidate, with more choices: Sum, Average, Count,
  Min, Max, Product, Standard Deviation, Variance.
- fixed some functions to be Excel-compatibel (FIND, REPLACE,LEFT,
  RIGHT,MID,REPT)
- now it's "Sheet" everywhere, not more "Table" :-)
- added formula indicator (small blue rectangle on the corner,
  when the cell holds a formula). idea from Quattro Pro
- added Greek to EURO() function
- new function category: Engineering
- added support with templates

new functions added:
 ISBLANK, CHAR, CODE, VALUE, DOLLAR, CONCATENATE, FIXED, T, TEXT, SUBSTITUTE,
 SEARCH, INFO, FILENAME, TYPE, COUNTBLANK, N, AVEDEV, ARABIC, AVERAGEA, ROT,
 FIB, BASE, FACTDOUBLE, SQRTPI, QUOTIENT, MULTINOMIAL

Until beta1:
------------

- bug fixes :-)
- performance enhancements
- support up to 2^15 columns and rows, formerly it was 676 columns and 10000
  rows

- add support for spell-check