@@ -6,7 +6,9 @@ Until beta2:
 
 - bug fixes
 - perfomance enhancements
-- added show/hide grid on printout option
+- print functions:
+    - added show/hide grid on printout option
+    - added print range definiton
 - paper layout now a property of sheet (not the whole workbook)
 - header/footer now a property of sheet (not the whole workbook)
 - Sort enhanced for
